Formulario para insertar jugador

--- a/Frontend/src/app/forms/player-form/player-form.component.html
+++ b/Frontend/src/app/forms/player-form/player-form.component.html
@@ -1,15 +1,20 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
         <h4 class="mb-4">Inserta tus datos de jugador</h4>
-        <form>
+        <form [formGroup]="playerForm">
             <div class="mb-3">
                 <label for="name" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name">
+                <input type="text" class="form-control" id="name" aria-describedby="name" formControlName="name">
+                 @if(playerForm.get('pokemonName')?.touched && playerForm.get('pokemonName')?.invalid){
+                    <div class="text-danger">
+                        El nombre es obligatorio.
+                    </div>
+                }
             </div>
             
             <div class="mb-3">
                 <label for="avatar" class="form-label">Avatar</label>
-                <input class="form-control" type="file" id="avatar" accept="image/*">
+                <input class="form-control" type="file" id="avatar" accept="image/*" formControlName="avatar">
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
