--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
                     <a class="nav-link" routerLink="/newCard">Registrar Carta</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" routerLink="/newPlayer">Registrar Jugador</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Iniciar Partida</a>
                 </li>
             </ul>
