--- a/Frontend/src/app/pokemon-card/pokemon-card.component.html
+++ b/Frontend/src/app/pokemon-card/pokemon-card.component.html
@@ -1,5 +1,5 @@
 @if(card){
-<div class="card">
+<div class="card h-100">
     <div class="card-header d-flex justify-content-between">
         <p>{{ card.name }}</p>
         <p>{{ card.hp }}ps</p>
