--- a/Frontend/src/app/pokemon-card/pokemon-card.component.html
+++ b/Frontend/src/app/pokemon-card/pokemon-card.component.html
@@ -5,7 +5,7 @@
         <p>{{ card.hp }}ps</p>
     </div>
     <div class="card-body">
-        <img src="https://localhost:7214/api/Values/{{ card.image }}" alt="" class="img-fluid">
+        <img src="https://localhost:7214/api/Values/pokemon/{{ card.image }}" alt="" class="img-fluid">
         <p>Damage: {{ card.attack }}</p>
         <p>Defense: {{ card.block }}</p>
         <p>Ammo: {{ card.ammo }}</p>
