Gestión respuesta de inserción de imagenes + gestión pestañas en el front

--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -9,7 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/">Cartas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="/players">Jugadores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/newCard">Registrar Carta</a>
@@ -18,7 +21,7 @@
                     <a class="nav-link" routerLink="/newPlayer">Registrar Jugador</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar Partida</a>
+                    <a class="nav-link" routerLink="/playerSelector">Iniciar Partida</a>
                 </li>
             </ul>
         </div>
