--- a/Frontend/src/app/player-list/player-list.component.html
+++ b/Frontend/src/app/player-list/player-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
     <div class="row mx-0">
         <h1 class="text-center mb-4">Lista de jugadores</h1>
         <table class="table">
