Selector de cartas + página Iniciar Partida

--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" routerLink="/newPlayer">Registrar Jugador</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/playerSelector">Iniciar Partida</a>
+                    <a class="nav-link" routerLink="/startGame">Iniciar Partida</a>
                 </li>
             </ul>
         </div>
