--- a/Frontend/src/app/pages/start-game-page/start-game-page.component.html
+++ b/Frontend/src/app/pages/start-game-page/start-game-page.component.html
@@ -1,2 +1,8 @@
-<app-player-selector></app-player-selector>
-<app-combat></app-combat>
+@if(combatStarted){
+    <app-combat></app-combat>
+}@else {
+    <app-player-selector (startCombatEmitter)="startGame()"></app-player-selector>
+}
+
+
+
