--- a/Frontend/src/app/combat/combat.component.html
+++ b/Frontend/src/app/combat/combat.component.html
@@ -1,1 +1,28 @@
-<p>combat works!</p>
+@if(player1 && player2){
+    <div class="container my-5 border rounded p-5">
+        <div class="row">
+            <div class="col">
+                <h4>Jugador 1</h4>
+                <p><img src="https://localhost:7214/api/Values/jugadores/{{ player1.avatar }}" alt="" style="width: 50px; height: 50px;">{{ player1.name }}</p>
+            </div>
+            <div class="col text-end">
+                <h4>Jugador 2</h4>
+                <p><img src="https://localhost:7214/api/Values/jugadores/{{ player2.avatar }}" alt="" style="width: 50px; height: 50px;">{{ player2.name }}</p>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-between">
+            <div class="col-4">
+                @if(player1.card){
+                    <app-pokemon-card [cardId]="player1.card.id"></app-pokemon-card>
+                }
+                
+            </div>
+            <div class="col-4">
+                @if(player2.card){
+                    <app-pokemon-card [cardId]="player2.card.id"></app-pokemon-card>
+                }
+            </div>
+        </div>
+    </div>
+}
+
