--- a/Frontend/src/app/combat/combat.component.html
+++ b/Frontend/src/app/combat/combat.component.html
@@ -17,17 +17,21 @@
                 }
                 
             </div>
+            @if (turno) {
             <div class="col-2 d-flex flex-column justify-content-center">
-                <button class="btn btn-outline-danger mb-2">Atacar</button>
+                <button class="btn btn-outline-danger mb-2" (click)="attack()">Atacar</button>
                 <button class="btn btn-outline-primary mb-2">Defender</button>
                 <button class="btn btn-outline-success">Recargar</button>
             </div>
+            <div class="col-2"></div>
+            }@else {
+            <div class="col-2"></div>
             <div class="col-2 d-flex flex-column justify-content-center">
-                <button class="btn btn-outline-danger mb-2">Atacar</button>
+                <button class="btn btn-outline-danger mb-2" (click)="attack()">Atacar</button>
                 <button class="btn btn-outline-primary mb-2">Defender</button>
                 <button class="btn btn-outline-success">Recargar</button>
             </div>
-
+            }
             <div class="col-4">
                 @if(player2.card){
                     <app-pokemon-card [cardId]="player2.card.id"></app-pokemon-card>
