--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
                     <a class="nav-link active" routerLink="/players">Jugadores</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" routerLink="/gameTimeline">Historial</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/newCard">Registrar Carta</a>
                 </li>
                 <li class="nav-item">
